# FishFarm

./: README.md  fish-farm.cabal  stack.yaml
app/: Main.hs
images/: stats_info.paint
src/: Config.hs  Contract.hs  Control.hs  Fish.hs  FishFarm.hs  GUI.hs  Images.hs  Inits.hs  Models.hs  Ponds.hs  Updates.hs
